--- a/static/PlatformerJam/platformer-poc.html
+++ b/static/PlatformerJam/platformer-poc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Making your first Phaser 3 Game - Part 2</title>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.js"></script>
+    <script src="phaser.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -38,8 +38,6 @@
     var cursor;
     var timedEvent;
 
-    var air_particle;
-
     var game = new Phaser.Game(config);
 
     function preload ()
@@ -62,53 +60,29 @@
         var path = '0 425 84 391 134 378 202 400 252 418 313 385 333 371 409 379 494 410 587 364 650 363 718 409 747 408 800 367 800 600 0 600';
 
         var verts = this.matter.verts.fromPath(path);
-        var ground = this.matter.add.fromVertices(505, 457, verts, { ignoreGravity: true, isStatic: true }, true, 0.01, 10);
-        //NOTE FOR SHAWN:         I tinkered here: ^    ^                          and here ^
+        this.matter.add.fromVertices(408, 492, verts, { ignoreGravity: true }, true, 0.01, 10);
 
 
 
         //spawning Red Amoeba (player object)
         player = this.matter.add.image(400, 50, 'amoeba');
-        player.xType = "player";
         player.setBody(
         {
           type: 'polygon',
           sides: 7,
           radius: 13
 
-        });
+        }
 
-        this.matter.world.on('collisionstart', function (event, bodyA, bodyB) {
-          //console.log("collisionstart");
-          if(bodyA.gameObject != null && bodyB.gameObject != null) {
-            //console.log(bodyB);
-            if(bodyB.gameObject.xType == "air_particle") {
-              //console.log("HIT_B");
-              bodyB.gameObject.visible = false;
-              bodyB.gameObject.destroy();
-              //bodyB.destroy();
-            }
 
-            if(bodyA.gameObject.xType == "air_particle") {
-              //console.log("HIT_A");
-              bodyA.gameObject.visible = false;
-              bodyA.gameObject.destroy();
-              //bodyA.destroy();
-            }
-          }
+      );
 
-        }, this);
-
-        cursor = this.input.keyboard.createCursorKeys();
-
-        timedEvent = this.time.addEvent({ delay: Phaser.Math.Between(300,2000), callback: onEvent, callbackScope: this, loop: true });
+      cursor = this.input.keyboard.createCursorKeys();
     }
 
     function update ()
     {
-
-
-
+      timedEvent = this.time.delayedCall(Phaser.Math.Between(500,3000), onEvent, [], this);
       if(cursor.left.isDown)
       {
         player.setVelocityX(-4);
@@ -125,14 +99,9 @@
         player.setVelocityY(-3);
       }
     }
-
     function onEvent()
     {
-
-
       var air_particle = this.matter.add.image(-10 ,Phaser.Math.Between(250, 350), 'air');
-
-      air_particle.xType = "air_particle";
       air_particle.setBody(
         {
           type: 'polygon',
@@ -140,13 +109,13 @@
           radius: 13
         }
       );
-      air_particle.setIgnoreGravity(true);
-      air_particle.setFrictionAir(0);
-      air_particle.setVelocityX(10);
-
+      air_particle.setVelocityX(70);
+      if(air_particle.X >= 500)
+      {
+        air_particle.destroy();
+      }
 
     }
-
 
 </script>
 
