--- a/static/platformer-poc.html
+++ b/static/platformer-poc.html
@@ -3,179 +3,166 @@
 <head>
     <meta charset="UTF-8" />
     <title>Making your first Phaser 3 Game - Part 2</title>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.16.1/dist/phaser.js"></script>
     <style type="text/css">
         body {
             margin: 0;
         }
     </style>
+    <script type="text/javascript">
+
+      var GameScene = new Phaser.Class({
+          Extends: Phaser.Scene,
+          initialize:
+
+          function GameScene () {
+              console.log("GameScene()");
+              this.level;
+              this.player;
+              this.cursor;
+              this.timedEvent;
+              this.resetFlagEvent;
+              this.air_particle;
+              this.hitByParticle = false;
+              Phaser.Scene.call(this, { key: 'Game' });
+
+          },
+
+          preload: function() {
+              console.log("GameScene.preload()");
+              /*
+              // Indian Man, Uncomment this section to use for your local development
+              this.load.image('sky', 'Phaser/JAMSKY2.png');
+              this.load.image('foreground_brown', 'Phaser/JAM2FG.png');
+              this.load.image('mid_reg', 'Phaser/JAM2PLATFORM.png');
+              this.load.image('particle', 'Phaser/particle.png');
+              this.load.image('amoeba', 'Phaser/ameba.png');
+              */
+              this.load.image('sky', '/assets/images/sky.png');
+              this.load.image('foreground_brown', '/assets/images/fg.png');
+              this.load.image('mid_reg', '/assets/images/mid_reg.png');
+              this.load.image('particle', '/assets/images/particle.png');
+              this.load.image('amoeba', '/assets/images/amoeba.png');
+
+          },
+
+          create: function() {
+              console.log("GameScene.create()");
+              //342 > 310 > 294
+              this.back = this.add.tileSprite(7200/2,600/2,7200,600,'sky');
+
+              level = this.add.image(0, 600, 'mid_reg').setOrigin(0,1);
+
+              this.matter.world.setBounds(0, 0, 7200, 600, 32, true, true, false, true);
+              this.cameras.main.setBounds(0, 0, 7200, 600);
+
+              var path = '0 294 38 310 68 342 97 342 126 310 156 294 196 294 231 310 260 342 289 342 318 310 353 294 388 294 422 310 452 342 481 342 511 310 544 294 581 294 615 310 644 342 '+
+                        '672 342 703 310 737 294 772 294 805 310 836 342 865 342 896 310 929 294 965 294 998 310 1029 342 1055 342 1085 310 1119 294 1158 294 1189 310 1221 342 1221 600 0 600';
+
+              var verts = this.matter.verts.fromPath(path);
+              var ground = this.matter.add.fromVertices(620, 407, verts, { ignoreGravity: true, isStatic: true }, true, 0.01, 10);
+
+              this.player = this.matter.add.image(50, 50, 'amoeba');
+              this.player.xType = "player";
+              this.player.setBody({
+                type: 'polygon',
+                sides: 7,
+                radius: 13
+              });
+
+              this.matter.world.on('collisionstart', function (event, bodyA, bodyB) {
+                //console.log("collisionstart");
+                if(bodyA.gameObject != null && bodyB.gameObject != null) {
+                  //console.log(bodyB);
+                  if(bodyB.gameObject.xType == "air_particle" && bodyA.gameObject.xType == "air_particle") {
+                    //console.log("HIT_B");
+                    bodyB.gameObject.visible = false;
+                    bodyB.gameObject.destroy();
+                    bodyA.gameObject.visible = false;
+                    bodyA.gameObject.destroy();
+                    //bodyB.destroy();
+                  }
+                  else if(bodyA.gameObject.xType == "air_particle" && bodyB.gameObject.xType == "player") {
+                    bodyA.gameObject.visible = false;
+                    bodyA.gameObject.destroy();
+                    this.hitByParticle = true;
+                    bodyB.gameObject.setVelocityX(7);
+                    this.resetFlagEvent = this.time.delayedCall(2000, this.resetFlag, [], this);
+                  }
+                  else if(bodyB.gameObject.xType == "air_particle" && bodyA.gameObject.xType == "player") {
+                    bodyB.gameObject.visible = false;
+                    bodyB.gameObject.destroy();
+                    this.hitByParticle = true;
+                    bodyA.gameObject.setVelocityX(7);
+                    this.resetFlagEvent = this.time.delayedCall(2000, this.resetFlag, [], this);
+                  }
+                }
+              }, this);
+
+              this.cursor = this.input.keyboard.createCursorKeys();
+
+              this.cameras.main.startFollow(this.player, true, 0.09, 0.09);  //make camera follow the player
+              this.timedEvent = this.time.addEvent({ delay: Phaser.Math.Between(300,2000), callback: this.onEvent, callbackScope: this, loop: true });
+
+              this.front = this.add.tileSprite(7200/2,600/2,7200,600,'foreground_brown');
+          },
+
+          update: function() {
+              this.back.tilePositionX -= 10.5;
+              if(this.cursor.left.isDown && !this.hitByParticle){
+                this.player.setVelocityX(-4);
+                this.front.tilePositionX -= 3.25;
+              }
+
+              if(this.cursor.right.isDown && !this.hitByParticle) {
+                this.player.setVelocityX(4);
+                this.front.tilePositionX += 3.25;
+              }
+
+              if(this.cursor.up.isDown) {
+                this.player.setVelocityY(-3);
+              }
+          },
+
+          resetFlag: function() {
+            this.hitByParticle = false;
+          },
+
+          onEvent: function() {
+            var air_particle = this.matter.add.image(-10 ,Phaser.Math.Between(50, 280), 'particle');
+            air_particle.xType = "air_particle";
+            air_particle.setBody({
+                type: 'polygon',
+                sides: 7,
+                radius: 13
+              }
+            );
+            air_particle.setIgnoreGravity(true);
+            air_particle.setFrictionAir(0);
+            air_particle.setVelocityX(10);
+          }
+      });
+
+      var config = {
+          type: Phaser.AUTO,
+          width: 800,
+          height: 600,
+          physics: {                              //for physics system
+            default: 'matter',
+            matter: {
+              gravity: { x: 2,
+                        y: 3},
+              debug: true
+            }
+          },
+          scene: [GameScene]
+      };
+
+
+      var game = new Phaser.Game(config);
+  </script>
 </head>
 <body>
-
-<script type="text/javascript">
-
-    var config = {
-        type: Phaser.AUTO,
-        width: 800,
-        height: 600,
-        physics: {                              //for physics system
-          default: 'matter',
-          matter: {
-            gravity: { x: 2,
-                      y: 3},
-            debug: true
-          }
-        },
-        scene: {
-            preload: preload,
-            create: create,
-            update: update
-        }
-    };
-
-    var level;
-    var player;
-    var cursor;
-    var timedEvent;
-    var resetFlagEvent;
-
-    var air_particle;
-    var hitByParticle = false;
-
-    var game = new Phaser.Game(config);
-
-    function preload ()
-    {
-        this.load.image('amoeba', 'PlatformerJam/amoeba.png');
-        this.load.image('ground', 'PlatformerJam/MainLevel.png');
-        this.load.image('air', 'PlatformerJam/air_particle.png');
-    }
-
-    function create ()
-    {
-
-        //spawning the terrain/level platform
-        level = this.add.image(0, 600, 'ground').setOrigin(0,1);
-
-        //setting bounds around the world
-        this.matter.world.setBounds(0, 0, 2400, 600, 32, true, true, false, true);
-        this.cameras.main.setBounds(0, 0, 2400, 600);
-
-        //actually setting vertices for the body that would encapsulate the terrain
-        //var path = '0 425 84 391 134 378 202 400 252 418 313 385 333 371 409 379 494 410 587 364 650 363 718 409 747 408 800 367 800 600 0 600';
-        var path = '0 526 10 522 20 510 59 489 102 479 123 484 148 502 153 502 188 460 215 437 240 430 294 430 321 441 347 469 373 439 395 415 430 401 491 397 514 399 564 434 579 417 601 400 619 392 668 371 740 369 795 397 869 365 930 364 973 389 1049 359 1090 361 1127 387 1185 362 1235 363 1286 387 1351 363 1395 363 1442 387 1500 361 1540 360 1591 388 1657 358 1691 358 1751 385 1798 363 1874 359 1927 380 1990 362 2043 359 2085 378 2129 357 2190 355 2244 382 2315 357 2400 354 2400 600 0 600';
-
-        var verts = this.matter.verts.fromPath(path);
-        var ground = this.matter.add.fromVertices(1115, 475, verts, { ignoreGravity: true, isStatic: true }, true, 0.01, 10);
-        //NOTE FOR SHAWN:         I tinkered here: ^    ^                          and here ^
-
-
-
-        //spawning Red Amoeba (player object)
-        player = this.matter.add.image(2200, 50, 'amoeba');
-        player.xType = "player";
-        player.setBody(
-        {
-          type: 'polygon',
-          sides: 7,
-          radius: 13
-
-        });
-
-        this.matter.world.on('collisionstart', function (event, bodyA, bodyB) {
-          //console.log("collisionstart");
-          if(bodyA.gameObject != null && bodyB.gameObject != null) {
-            //console.log(bodyB);
-            if(bodyB.gameObject.xType == "air_particle" && bodyA.gameObject.xType == "air_particle") {
-              //console.log("HIT_B");
-              bodyB.gameObject.visible = false;
-              bodyB.gameObject.destroy();
-              bodyA.gameObject.visible = false;
-              bodyA.gameObject.destroy();
-              //bodyB.destroy();
-            }
-
-            if(bodyA.gameObject.xType == "air_particle" && bodyB.gameObject.xType == "player")
-            {
-              bodyA.gameObject.visible = false;
-              bodyA.gameObject.destroy();
-              hitByParticle = true;
-              bodyB.gameObject.setVelocityX(7);
-              resetFlagEvent = this.time.delayedCall(2000, resetFlag, [], this);
-
-
-            }
-            else if(bodyB.gameObject.xType == "air_particle" && bodyA.gameObject.xType == "player")
-            {
-              bodyB.gameObject.visible = false;
-              bodyB.gameObject.destroy();
-              hitByParticle = true;
-              bodyA.gameObject.setVelocityX(7);
-              resetFlagEvent = this.time.delayedCall(2000, resetFlag, [], this);
-            }
-
-
-          }
-
-        }, this);
-
-        cursor = this.input.keyboard.createCursorKeys();
-        this.cameras.main.startFollow(player, true, 0.09, 0.09);  //make camera follow the player
-
-        timedEvent = this.time.addEvent({ delay: Phaser.Math.Between(300,2000), callback: onEvent, callbackScope: this, loop: true });
-
-    }
-
-    function update ()
-    {
-
-
-
-      if(cursor.left.isDown && !hitByParticle)
-      {
-        player.setVelocityX(-4);
-
-      }
-
-      if(cursor.right.isDown && !hitByParticle)
-      {
-        player.setVelocityX(4);
-      }
-
-      if(cursor.up.isDown)
-      {
-        player.setVelocityY(-3);
-      }
-    }
-
-    function resetFlag()
-    {
-      hitByParticle = false;
-    }
-
-    function onEvent()
-    {
-
-
-      var air_particle = this.matter.add.image(-10 ,Phaser.Math.Between(250, 350), 'air');
-
-      air_particle.xType = "air_particle";
-      air_particle.setBody(
-        {
-          type: 'polygon',
-          sides: 7,
-          radius: 13
-        }
-      );
-      air_particle.setIgnoreGravity(true);
-      air_particle.setFrictionAir(0);
-      air_particle.setVelocityX(10);
-
-
-    }
-
-
-</script>
-
+    <div id="gameCanvas"></div>
 </body>
 </html>
