--- a/static/platformer-poc.html
+++ b/static/platformer-poc.html
@@ -10,7 +10,6 @@
         }
     </style>
     <script type="text/javascript">
-
       var GameScene = new Phaser.Class({
           Extends: Phaser.Scene,
           initialize:
@@ -19,6 +18,7 @@
               console.log("GameScene()");
               this.level;
               this.player;
+              this.playerSprite;
               this.cursor;
               this.timedEvent;
               this.resetFlagEvent;
@@ -50,12 +50,27 @@
               this.load.image('mid_reg', '/assets/images/mid_reg.png');
               this.load.image('mid_white', '/assets/images/mid_white.png');
               this.load.image('particle', '/assets/images/particle.png');
-              this.load.image('amoeba', '/assets/images/amoeba.png');
+              this.load.spritesheet('amoeba', '/assets/images/amoeba.png', { frameWidth: 68, frameHeight: 77 });
 
           },
 
           create: function() {
               console.log("GameScene.create()");
+
+              this.anims.create({
+                  key: "amoeba_idle",
+                  frames: this.anims.generateFrameNumbers("amoeba", { frames: [ 1, 2 ] } ),
+                  frameRate: 24,
+                  repeat: -1
+              });
+
+              this.anims.create({
+                  key: "amoeba_hit",
+                  frames: this.anims.generateFrameNumbers("amoeba", { frames: [ 0 ] } ),
+                  frameRate: 24,
+                  repeat: 0
+              });
+
               //342 > 310 > 294
               this.back = this.add.tileSprite(7200/2,600/2,7200,600,'sky');
 
@@ -64,20 +79,23 @@
               this.matter.world.setBounds(0, 0, 7200, 600, 32, true, true, false, true);
               this.cameras.main.setBounds(0, 0, 7200, 600);
 
-              var path = '0 294 38 310 68 342 97 342 126 310 156 294 196 294 231 310 260 342 289 342 318 310 353 294 388 294 422 310 452 342 481 342 511 310 544 294 581 294 615 310 644 342 '+
-                        '672 342 703 310 737 294 772 294 805 310 836 342 865 342 896 310 929 294 965 294 998 310 1029 342 1055 342 1085 310 1119 294 1158 294 1189 310 1221 342 1221 600 0 600';
+              var path = '0 294 38 310 68 342 97 342 126 310 156 294 196 294 231 310 260 342 289 342 318 310 353 294 388 294 422 310 452 342 481 342 511 310 544 294 581 294 615 310 644 342 ' +
+                        '672 342 703 310 737 294 772 294 805 310 836 342 865 342 896 310 929 294 965 294 998 310 1029 342 1055 342 1085 310 1119 294 1158 294 1189 310 1221 342 1221 600 0 600 ' +
+                        '';
 
               var verts = this.matter.verts.fromPath(path);
               var ground = this.matter.add.fromVertices(620, 407, verts, { ignoreGravity: true, isStatic: true }, true, 0.01, 10);
 
-              this.player = this.matter.add.sprite(3792, 50, 'amoeba');
+              this.player = this.matter.add.sprite(7100, 50);
+              this.playerSprite = this.add.sprite(7100, 50, "amoeba");
               this.player.xType = "player";
               this.player.setDepth(10);
               this.player.setBody({
                 type: 'polygon',
                 sides: 7,
-                radius: 13
+                radius: 24
               });
+              this.playerSprite.anims.play("amoeba_idle", true);
 
               this.matter.world.on('collisionstart', function (event, bodyA, bodyB) {
                 //console.log("collisionstart");
@@ -91,6 +109,7 @@
                     bodyA.gameObject.destroy();
                     //bodyB.destroy();
                   } else if(bodyA.gameObject.xType == "air_particle" && bodyB.gameObject.xType == "player") {
+                    this.playerSprite.anims.play("amoeba_hit", true);
                     bodyA.gameObject.visible = false;
                     bodyA.gameObject.destroy();
                     this.hitByParticle = true;
@@ -98,6 +117,7 @@
                     this.resetFlagEvent = this.time.delayedCall(2000, this.resetFlag, [], this);
                   }
                   else if(bodyB.gameObject.xType == "air_particle" && bodyA.gameObject.xType == "player") {
+                    this.playerSprite.anims.play("amoeba_hit", true);
                     bodyB.gameObject.visible = false;
                     bodyB.gameObject.destroy();
                     this.hitByParticle = true;
@@ -114,7 +134,7 @@
               console.log(this.cameras.main);
 
               //TODO: re-enable when tweaking the particles
-              //this.timedEvent = this.time.addEvent({ delay: Phaser.Math.Between(300,2000), callback: this.onEvent, callbackScope: this, loop: true });
+              this.timedEvent = this.time.addEvent({ delay: Phaser.Math.Between(300,2000), callback: this.onEvent, callbackScope: this, loop: true });
 
               this.front = this.add.tileSprite(0,457,7200,143,'foreground_brown');
               this.front.setDisplayOrigin(0);
@@ -151,6 +171,10 @@
           },
 
           update: function() {
+
+              this.playerSprite.setX(this.player.x);
+              this.playerSprite.setY(this.player.y);
+
               this.back.tilePositionX -= 10.5;
               //this.front.tilePositionX = -camera.scrollX
 
@@ -170,6 +194,7 @@
           },
 
           resetFlag: function() {
+            this.playerSprite.anims.play("amoeba_idle", true);
             this.hitByParticle = false;
           },
 
